# OMOBOT

./: .gitignore  Dockerfile  README.md  base.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: upload.yml
bot/: __init__.py  __main__.py  bot.py
bot/data/: __init__.py  scraper.py  utils.py
bot/ext/: Information.py  Items.py  Skills.py  SkillsCommand.py  TextBox.py  Utils.py  information.py  utils.py
cogs/: SkillsCommand.py  TextBox.py  data.py  dataCog.py  developer.py  game.py  information.py  textbox.py  utils.py
data/: .gitignore  __init__.py  models.py  scraper.py
data/csv/: characters.csv  enemies.csv  items.csv  skills.csv
data/data/: characters.json  items.json  skills.json
data/json/: characters.json  skills.json
