[tool.poetry]
name = "omorpg"
version = "0.1.0"
description = ""
authors = ["Taha Abdulgader <undefined@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.2.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
