[tool.poetry]
name = "omobot"
version = "0.1.0"
description = ""
authors = ["LetsChill <private@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
jishaku = "^2.5.2"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
